--- a/nodepop/package.json
+++ b/nodepop/package.json
@@ -4,15 +4,22 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon /bin/www.js"
+    "dev": "nodemon /bin/www.js",
+    "initdb": "node initDB.js"
   },
   "dependencies": {
+    "chance": "^1.1.8",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-validator": "^6.14.1",
     "http-errors": "~1.6.3",
     "mongoose": "^6.3.4",
     "morgan": "~1.9.1"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^7.1.0",
+    "eslint": "^8.17.0"
   }
 }
